# py-package-template

./: README.md  pyproject.toml  pyproject_uv_template.toml
.github/workflows/: test_uv.yml
docs/: AI_CHAT_HISTORY.md  uv_best_practices.md  uv_quick_start.md  uv_workflow_comparison.md
tests/: conftest.py  test_calculation.py  test_main.py
